Updated GitHub Actions

--- a/.github/workflows/cocoapods.yml
+++ b/.github/workflows/cocoapods.yml
@@ -2,7 +2,8 @@ name: Cocoapods
 on: [pull_request, push]
 
 jobs:
-  build:
+  lint:
+    name: Lint
     runs-on: macOS-latest
     steps:
     - name: Checkout Code
