--- a/.github/workflows/swift-pacakge.yml
+++ b/.github/workflows/swift-pacakge.yml
@@ -3,7 +3,9 @@ on: [pull_request, push]
 
 jobs:
   build:
+    name: Build
     runs-on: macOS-latest
+
     steps:
     - name: Checkout Code
       uses: actions/checkout@v2
@@ -12,6 +14,15 @@ jobs:
       run: |
         swift --version
         swift build -v
+
+  test:
+    name: Test
+    runs-on: macOS-latest
+    needs: build
+
+    steps:
+    - name: Checkout Code
+      uses: actions/checkout@v2
 
     - name: Test
       run: |
