--- a/.github/workflows/swift-pacakge.yml
+++ b/.github/workflows/swift-pacakge.yml
@@ -29,10 +29,12 @@ jobs:
         swift test -v --enable-code-coverage
 
     - name: Generate Code Coverage File
+      if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
       run: |
         xcrun llvm-cov export --instr-profile=.build/x86_64-apple-macosx/debug/codecov/default.profdata .build/x86_64-apple-macosx/debug/ProtocolProxyPackageTests.xctest/Contents/MacOS/ProtocolProxyPackageTests > ./info.lcov
 
     - name: Upload Code Coverage
+      if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
       uses: codecov/codecov-action@v1
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
