Updated scripts to properly construct build path

--- a/.github/workflows/xcframework.yml
+++ b/.github/workflows/xcframework.yml
@@ -6,7 +6,7 @@ jobs:
     name: Build
     runs-on: macOS-latest
     env:
-      TMPDIR: /tmp/.protocolproxy.xcframework.build.${GITHUB_SHA}
+      TMPDIR: /tmp/.protocolproxy.xcframework.build
 
     steps:
     - name: Checkout Code
@@ -14,4 +14,4 @@ jobs:
 
     - name: Build
       run: |
-        ./scripts/xcframework.sh -output ${TMPDIR}/ProtocolProxy.xcframework
+        ./scripts/xcframework.sh -output ${TMPDIR}/${GITHUB_SHA}/ProtocolProxy.xcframework
