--- a/.github/workflows/xcframework.yml
+++ b/.github/workflows/xcframework.yml
@@ -14,4 +14,4 @@ jobs:
 
     - name: Build
       run: |
-        ./scripts/xcframework.sh -output ${TMPDIR}/${GITHUB_SHA}/ProtocolProxy.xcframework
+        ./scripts/xcframework.sh -output ${TMPDIR}/ProtocolProxy.xcframework
