--- a/.github/workflows/xcodebuild.yml
+++ b/.github/workflows/xcodebuild.yml
@@ -1,5 +1,5 @@
 name: Xcode Project
-on: push
+on: [push, workflow_dispatch]
 
 jobs:
   ios:
@@ -12,15 +12,20 @@ jobs:
 
     - name: Build iOS
       run: |
-        xcodebuild -project ProtocolProxy.xcodeproj -scheme "ProtocolProxy" -sdk iphoneos -configuration Debug
+        xcodebuild -project ProtocolProxy.xcodeproj -scheme "ProtocolProxy" -destination "generic/platform=iOS" -configuration Debug
 
     - name: Build iOS Simulator
       run: |
-        xcodebuild -project ProtocolProxy.xcodeproj -scheme "ProtocolProxy" -sdk iphonesimulator -configuration Debug
+        xcodebuild -project ProtocolProxy.xcodeproj -scheme "ProtocolProxy" -destination "generic/platform=iOS Simulator" -configuration Debug
 
     - name: Test
       run: |
-        xcodebuild -project ProtocolProxy.xcodeproj -scheme "ProtocolProxy" -destination "platform=iOS Simulator,name=iPhone 11 Pro Max" -configuration Debug ONLY_ACTIVE_ARCH=YES test
+        IOS_SIM="$(xcrun simctl list devices available | grep "iPhone [0-9]" | sort -rV | head -n 1 | sed -E 's/(.+)[ ]*\([^)]*\)[ ]*\([^)]*\)/\1/' | awk '{$1=$1};1')"
+        if [ "${#IOS_SIM}" == "0" ]; then
+            IOS_SIM = "iPhone 12 Pro" # Fallback Simulator
+        fi
+
+        xcodebuild -project ProtocolProxy.xcodeproj -scheme "ProtocolProxy" -testPlan "ProtocolProxyTests" -destination "platform=iOS Simulator,name=$IOS_SIM" -configuration Debug ONLY_ACTIVE_ARCH=YES test
 
   maccatalyst:
     name: Mac Catalyst
@@ -32,11 +37,11 @@ jobs:
 
     - name: Build
       run: |
-        xcodebuild -project ProtocolProxy.xcodeproj -scheme "ProtocolProxy" -sdk macosx -configuration Debug
+        xcodebuild -project ProtocolProxy.xcodeproj -scheme "ProtocolProxy" -destination "generic/platform=macOS,variant=Mac Catalyst" -configuration Debug
 
     - name: Test
       run: |
-        xcodebuild -project ProtocolProxy.xcodeproj -scheme "ProtocolProxy" -destination "platform=macOS" -configuration Debug ONLY_ACTIVE_ARCH=YES test
+        xcodebuild -project ProtocolProxy.xcodeproj -scheme "ProtocolProxy" -testPlan "ProtocolProxyTests" -destination "platform=macOS,variant=Mac Catalyst" -configuration Debug ONLY_ACTIVE_ARCH=YES test
 
   macos:
     name: macOS
@@ -48,11 +53,11 @@ jobs:
 
     - name: Build
       run: |
-        xcodebuild -project ProtocolProxy.xcodeproj -scheme "ProtocolProxy macOS" -configuration Debug
+        xcodebuild -project ProtocolProxy.xcodeproj -scheme "ProtocolProxy macOS" -destination "generic/platform=macOS" -configuration Debug
 
     - name: Test
       run: |
-        xcodebuild -project ProtocolProxy.xcodeproj -scheme "ProtocolProxy macOS" -configuration Debug test
+        xcodebuild -project ProtocolProxy.xcodeproj -scheme "ProtocolProxy macOS" -testPlan "ProtocolProxy macOS Tests" -configuration Debug ONLY_ACTIVE_ARCH=YES test
 
   tvos:
     name: tvOS
@@ -64,19 +69,24 @@ jobs:
 
     - name: Build tvOS
       run: |
-        xcodebuild -project ProtocolProxy.xcodeproj -scheme "ProtocolProxy tvOS" -sdk appletvos -configuration Debug
+        xcodebuild -project ProtocolProxy.xcodeproj -scheme "ProtocolProxy tvOS" -destination "generic/platform=tvOS" -configuration Debug
 
     - name: Build tvOS Simulator
       run: |
-        xcodebuild -project ProtocolProxy.xcodeproj -scheme "ProtocolProxy tvOS" -sdk appletvsimulator -configuration Debug
+        xcodebuild -project ProtocolProxy.xcodeproj -scheme "ProtocolProxy tvOS" -destination "generic/platform=tvOS Simulator" -configuration Debug
 
     - name: Test
       run: |
-        xcodebuild -project ProtocolProxy.xcodeproj -scheme "ProtocolProxy tvOS" -destination "platform=tvOS Simulator,name=Apple TV 4K" -configuration Debug ONLY_ACTIVE_ARCH=YES test
+        TVOS_SIM="$(xcrun simctl list devices available | grep "Apple TV" | sort -V | head -n 1 | sed -E 's/(.+)[ ]*\([^)]*\)[ ]*\([^)]*\)/\1/' | awk '{$1=$1};1')"
+        if [ "${#TVOS_SIM}" == "0" ]; then
+            TVOS_SIM = "Apple TV" # Fallback Simulator
+        fi
+
+        xcodebuild -project ProtocolProxy.xcodeproj -scheme "ProtocolProxy tvOS" -testPlan "ProtocolProxy tvOS Tests" -destination "platform=tvOS Simulator,name=$TVOS_SIM" -configuration Debug ONLY_ACTIVE_ARCH=YES test
 
   watchos:
     name: watchOS
-    runs-on: macOS-latest
+    runs-on: macOS-11
 
     steps:
     - name: Checkout Code
@@ -84,8 +94,17 @@ jobs:
 
     - name: Build watchOS
       run: |
-        xcodebuild -project ProtocolProxy.xcodeproj -scheme "ProtocolProxy watchOS" -sdk watchos -configuration Debug
+        xcodebuild -project ProtocolProxy.xcodeproj -scheme "ProtocolProxy watchOS" -destination "generic/platform=watchOS" -configuration Debug
 
     - name: Build watchOS Simulator
       run: |
-        xcodebuild -project ProtocolProxy.xcodeproj -scheme "ProtocolProxy watchOS" -sdk watchsimulator -configuration Debug
+        xcodebuild -project ProtocolProxy.xcodeproj -scheme "ProtocolProxy watchOS" -destination "generic/platform=watchOS Simulator" -configuration Debug
+
+    - name: Test
+      run: |
+        WATCHOS_SIM="$(xcrun simctl list devices available | grep "Apple Watch" | sort -rV | head -n 1 | sed -E 's/(.+)[ ]*\([^)]*\)[ ]*\([^)]*\)/\1/' | awk '{$1=$1};1')"
+        if [ "${#WATCHOS_SIM}" == "0" ]; then
+            WATCHOS_SIM = "Apple Watch Series 6 - 44mm" # Fallback Simulator
+        fi
+
+        xcodebuild -project ProtocolProxy.xcodeproj -scheme "ProtocolProxy watchOS" -testPlan "ProtocolProxy watchOS Tests" -destination "platform=watchOS Simulator,name=$WATCHOS_SIM" -configuration Debug ONLY_ACTIVE_ARCH=YES test
