--- a/ProtocolProxy.xcodeproj/xcshareddata/xcschemes/ProtocolProxy macOS Tests.xcscheme
+++ b/ProtocolProxy.xcodeproj/xcshareddata/xcschemes/ProtocolProxy macOS Tests.xcscheme
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1220"
-   version = "1.3">
+   LastUpgradeVersion = "1300"
+   version = "1.7">
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
@@ -16,18 +16,24 @@
       <CodeCoverageTargets>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "DDF756B322AA782D002E11D4"
+            BlueprintIdentifier = "DD86D56F23D11C860046E63E"
             BuildableName = "ProtocolProxy.framework"
             BlueprintName = "ProtocolProxy macOS"
             ReferencedContainer = "container:ProtocolProxy.xcodeproj">
          </BuildableReference>
       </CodeCoverageTargets>
+      <TestPlans>
+         <TestPlanReference
+            reference = "container:Tests/Test Plans/ProtocolProxy macOS Tests.xctestplan"
+            default = "YES">
+         </TestPlanReference>
+      </TestPlans>
       <Testables>
          <TestableReference
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "DDF756BB22AA782D002E11D4"
+               BlueprintIdentifier = "DD86D57723D11C860046E63E"
                BuildableName = "ProtocolProxyTests.xctest"
                BlueprintName = "ProtocolProxy macOS Tests"
                ReferencedContainer = "container:ProtocolProxy.xcodeproj">
