--- a/ProtocolProxy.xcodeproj/xcshareddata/xcschemes/ProtocolProxy watchOS.xcscheme
+++ b/ProtocolProxy.xcodeproj/xcshareddata/xcschemes/ProtocolProxy watchOS.xcscheme
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1220"
-   version = "1.3">
+   LastUpgradeVersion = "1300"
+   version = "1.7">
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
@@ -14,7 +14,7 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "DDF756EB22AA7854002E11D4"
+               BlueprintIdentifier = "DD86D5C323D11D140046E63E"
                BuildableName = "ProtocolProxy.framework"
                BlueprintName = "ProtocolProxy watchOS"
                ReferencedContainer = "container:ProtocolProxy.xcodeproj">
@@ -27,8 +27,12 @@
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
-      <Testables>
-      </Testables>
+      <TestPlans>
+         <TestPlanReference
+            reference = "container:Tests/Test Plans/ProtocolProxy watchOS Tests.xctestplan"
+            default = "YES">
+         </TestPlanReference>
+      </TestPlans>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
@@ -50,7 +54,7 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "DDF756EB22AA7854002E11D4"
+            BlueprintIdentifier = "DD86D5C323D11D140046E63E"
             BuildableName = "ProtocolProxy.framework"
             BlueprintName = "ProtocolProxy watchOS"
             ReferencedContainer = "container:ProtocolProxy.xcodeproj">
