--- a/ProtocolProxy.xcodeproj/xcshareddata/xcschemes/ProtocolProxy.xcscheme
+++ b/ProtocolProxy.xcodeproj/xcshareddata/xcschemes/ProtocolProxy.xcscheme
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1220"
-   version = "1.3">
+   LastUpgradeVersion = "1300"
+   version = "1.7">
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
@@ -14,7 +14,7 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "DDF7567222AA773D002E11D4"
+               BlueprintIdentifier = "DD86D53C23D11B3E0046E63E"
                BuildableName = "ProtocolProxy.framework"
                BlueprintName = "ProtocolProxy"
                ReferencedContainer = "container:ProtocolProxy.xcodeproj">
@@ -27,18 +27,12 @@
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
-      <Testables>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "DDF7567B22AA773D002E11D4"
-               BuildableName = "ProtocolProxyTests.xctest"
-               BlueprintName = "ProtocolProxyTests"
-               ReferencedContainer = "container:ProtocolProxy.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
-      </Testables>
+      <TestPlans>
+         <TestPlanReference
+            reference = "container:Tests/Test Plans/ProtocolProxyTests.xctestplan"
+            default = "YES">
+         </TestPlanReference>
+      </TestPlans>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
@@ -60,7 +54,7 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "DDF7567222AA773D002E11D4"
+            BlueprintIdentifier = "DD86D53C23D11B3E0046E63E"
             BuildableName = "ProtocolProxy.framework"
             BlueprintName = "ProtocolProxy"
             ReferencedContainer = "container:ProtocolProxy.xcodeproj">
