--- a/.github/workflows/cocoapods.yml
+++ b/.github/workflows/cocoapods.yml
@@ -4,7 +4,7 @@ on: [push, workflow_dispatch]
 jobs:
   lint:
     name: Lint
-    runs-on: macOS-latest
+    runs-on: macOS-11
     steps:
     - name: Checkout Code
       uses: actions/checkout@v2
