--- a/.github/workflows/xcframework.yml
+++ b/.github/workflows/xcframework.yml
@@ -1,10 +1,28 @@
 name: XCFramework
-on: [push, workflow_dispatch]
+on:
+  workflow_dispatch:
+  push:
+    branches:
+      - '**'
+    tags-ignore:
+      - '**'
+    paths-ignore:
+      - '.github/**' # Ignore all files under '.github'
+      - '!.github/workflows/xcframework.yml' # Except for this workflow
+      - '.gitignore'
+      - '.remarkrc'
+      - '.swiftlint.yml'
+      - 'codecov.yml'
+      - 'LICENSE'
+      - 'Package.swift'
+      - 'README.md'
+      - 'Tests/**'
+      - 'ProtocolProxy.podspec'
 
 jobs:
   build:
     name: Build
-    runs-on: macOS-latest
+    runs-on: macOS-11
     env:
       TMPDIR: /tmp/.protocolproxy.xcframework.build
 
@@ -12,6 +30,18 @@ jobs:
     - name: Checkout Code
       uses: actions/checkout@v2
 
+    - name: Setup Environment
+      run: |
+        mkdir -p "${TMPDIR}/Output"
+        mkdir -p "${TMPDIR}/Logs"
+
     - name: Build
       run: |
-        ./scripts/xcframework.sh -output ${TMPDIR}/ProtocolProxy.xcframework
+        ./scripts/xcframework.sh --build-dir "${TMPDIR}" -- SKIP_SWIFTLINT=YES
+
+    - name: Upload Logs
+      uses: actions/upload-artifact@v2
+      if: always()
+      with:
+        name: BuildLogs
+        path: ${{ env.TMPDIR }}/Logs/*.log
